--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                            <div class="col-md-6">
                               <div class="text-bg">
                                  <h1>Strategy And <br>Research</h1>
-                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
+                                 <p>Gwapo ako</p>
                                  <a href="#">About More </a>
                               </div>
                            </div>
@@ -366,13 +366,13 @@
                   <form id="request" class="main_form">
                      <div class="row">
                         <div class="col-md-12 ">
-                           <input class="contactus" placeholder="Name" type="type" name="Name"> 
+                           <input class="contactus" placeholder="Name" type="type" name="Name">
                         </div>
                         <div class="col-md-12">
-                           <input class="contactus" placeholder="Email" type="type" name="Email"> 
+                           <input class="contactus" placeholder="Email" type="type" name="Email">
                         </div>
                         <div class="col-md-12">
-                           <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">                          
+                           <input class="contactus" placeholder="Phone Number" type="type" name="Phone Number">
                         </div>
                         <div class="col-md-12">
                            <input class="contactus1" placeholder="Message" type="type" Message="Name">
@@ -470,4 +470,3 @@
       <script src="js/custom.js"></script>
    </body>
 </html>
-
