--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                            <div class="col-md-6">
                               <div class="text-bg">
                                  <h1>Strategy And <br>Research</h1>
-                                 <p>Gwapo ako</p>
+                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
                                  <a href="#">About More </a>
                               </div>
                            </div>
